# goIt_homework_scrapping

./: config.ini  connect.py  main.py  models.py  pyproject.toml  queries.py  readme.md  scrap_to_json.py  seeds.py
