[tool.poetry]
name = "goit-homework-scrapping"
version = "0.1.0"
description = ""
authors = ["the10or <the10or@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
bs4 = "^0.0.1"
lxml = "^4.9.4"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
